--- a/2.snippetsJS/mouseXYcoordinatesOnShiftKey.html
+++ b/2.snippetsJS/mouseXYcoordinatesOnShiftKey.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
   <script>
+  /*
+  ----------------------------------------------------
+  implements a console.log of clientX and clientY position of
+  the mouse pointer, but only when I press shift key down and 
+  move the mouse over any part of the body element.
+  sayHello function wrapped on a DOMContentLoaded event,
+  function call using an addEventListener click event.
+  ----------------------------------------------------
+  */  
   //Event handling
   document.addEventListener('DOMContentLoaded', 
           function(event) {
