--- a/2.snippetsJS/jsonAjaxExample.html
+++ b/2.snippetsJS/jsonAjaxExample.html
@@ -1,3 +1,26 @@
+/*
+----------------------------------------------------------------------------------------------------------------
+single page example with bootstrap, in order to grab some random data from a random api upon a click event
+listener.
+
+Click the button gets data asynchronously to the page. Right after clicking a page element is remove
+with positioning and brough back when clicking button once more.
+
+Not finished - but almost all done.
+I wanna add a set timeout - no particular reason other than control what gets executed first
+and parse api json data on page. that's all.
+
+So clicking button, removes html element, and brings json in page and sets on a table or something.
+then click one more time to bring back default elem/ reset.
+
+
+
+
+
+------------------------------------------------------------------------------------------------------------------
+*/
+
+
 <!DOCTYPE html>
 <html lang="en">
 
