--- a/2.snippetsJS/jsonAjaxExample.html
+++ b/2.snippetsJS/jsonAjaxExample.html
@@ -1,6 +1,6 @@
 /*
 ----------------------------------------------------------------------------------------------------------------
-single page example with bootstrap, in order to grab some random data from a random api upon a click event
+single page example, in order to grab some random data from a random api upon a click event
 listener.
 
 Click the button gets data asynchronously to the page. Right after clicking a page element is remove
@@ -304,6 +304,7 @@ then click one more time to bring back default elem/ reset.
                     //turn off the opacity before u leave the room
                     testa.style.position = "absolute";
                     testa.style.top = "5000px";
+                    testa.style.marginTop = "-5000px";
                     //turn off lights before leaving
                     testa.style.opacity = 0;
                     console.log('no im here damn it!');
