--- a/2.snippetsJS/jsonAjaxExample.html
+++ b/2.snippetsJS/jsonAjaxExample.html
@@ -304,6 +304,7 @@ then click one more time to bring back default elem/ reset.
                     //turn off the opacity before u leave the room
                     testa.style.position = "absolute";
                     testa.style.top = "5000px";
+                    //otherwise when top 5000px is on, footer goes wild
                     testa.style.marginTop = "-5000px";
                     //turn off lights before leaving
                     testa.style.opacity = 0;
