--- a/2.snippetsJS/jsonAjaxExample.html
+++ b/2.snippetsJS/jsonAjaxExample.html
@@ -37,9 +37,10 @@ then click one more time to bring back default elem/ reset.
         body {
             font-size: 16px;
             line-height: 24px;
+            padding-top:90px;
         }
         .toppushbot {
-            padding-top: 90px;
+           
         }
         .navbar.navbar-default.navbar-fixed-top {
             background-color: #d13030;
@@ -48,7 +49,7 @@ then click one more time to bring back default elem/ reset.
         }
         .topleft,
         .topright {
-            min-height: 500px;
+            min-height: 425px;
             background-color: rgba(209, 48, 48, 0.02);
             padding: 1em 2em;
             font-size: 16px;
@@ -126,7 +127,10 @@ then click one more time to bring back default elem/ reset.
         #footer {
             height: 90px;
             background-color: #212121;
-            margin-top: 120px;
+            position:absolute;
+            width:100%;
+            bottom:0;
+            margin-top:-90px;
         }
         h4.traffic {
             background-color: red;
