--- a/2.snippetsJS/jsonAjaxExample.html
+++ b/2.snippetsJS/jsonAjaxExample.html
@@ -261,7 +261,7 @@ then click one more time to bring back default elem/ reset.
         <script>
             //new instance obj
             var httpReq = new XMLHttpRequest();
-            httpReq.open('GET', 'https://learnwebcode.github.io/json-example/animals-1.json');
+            httpReq.open('GET', 'https://api.github.com');
              //once data loaded log it to console
             httpReq.onload = function() {
                 //console.log(httpReq.responseText);
