--- a/2.snippetsJS/jsonAjaxExample.html
+++ b/2.snippetsJS/jsonAjaxExample.html
@@ -1,21 +1,12 @@
 /*
 ----------------------------------------------------------------------------------------------------------------
 single page example, in order to grab some random data from a random api upon a click event
-listener.
+listener but before remove an element from page with js and absolute positioning.
 
-Click the button gets data asynchronously to the page. Right after clicking a page element is remove
-with positioning and brough back when clicking button once more.
+Click the button removes an element from page with positioning and then another function immediately invoked
+to get data from api. 
 
-Not finished - but almost all done.
-I wanna add a set timeout - no particular reason other than control what gets executed first
-and parse api json data on page. that's all.
-
-So clicking button, removes html element, and brings json in page and sets on a table or something.
-then click one more time to bring back default elem/ reset.
-
-
-
-
+No particular reason for calling two separate functions other than to control what gets executed first, and practice
 
 ------------------------------------------------------------------------------------------------------------------
 */
