--- a/2.snippetsJS/jsonAjax2.html
+++ b/2.snippetsJS/jsonAjax2.html
@@ -1,3 +1,17 @@
+/*
+----------------------------------------------------------------------------------------------------------------
+single page example - builds on top of the first one jsonAjax
+
+json data i'm hosting at that url to access array and subarray with for loops
+
+
+------------------------------------------------------------------------------------------------------------------
+*/
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 
