--- a/2.snippetsJS/carousel.html
+++ b/2.snippetsJS/carousel.html
@@ -1,4 +1,6 @@
-<!-- basic carousel, mobile first -starting at 320px -->
+<!-- basic carousel, mobile first -starting at 320px 
+     sample slides are on image folder: slide1,slide2,slide3,slide4 and slide5.png
+-->
 
 
 <!DOCTYPE html>
